--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <!--<color name="colorPrimary">#de5749</color>-->
     <color name="colorPrimary">#cc0000</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff6861</color>
     <color name="yellow1">#F9E60E</color>
     <color name="yellow2">#F9F89D</color>
     <color name="orange4">#F7BE45</color>
