--- a/app/src/main/res/layout/fragment_signup_email.xml
+++ b/app/src/main/res/layout/fragment_signup_email.xml
@@ -6,6 +6,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
