--- a/app/src/main/res/layout/fragment_signup_phone_1.xml
+++ b/app/src/main/res/layout/fragment_signup_phone_1.xml
@@ -37,7 +37,8 @@
                 android:layout_weight="2"
                 android:gravity="center_vertical|center_horizontal"
                 android:textStyle="bold"
-                android:typeface="serif" />
+                android:typeface="serif"
+                android:textSize="16dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_email"
@@ -79,7 +80,7 @@
 
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnLinkToLoginScreen"
             android:layout_width="fill_parent"
             android:layout_height="39dp"
             android:layout_gravity="center_horizontal"
