--- a/app/src/main/res/layout/fragment_signup_phone_1.xml
+++ b/app/src/main/res/layout/fragment_signup_phone_1.xml
@@ -23,7 +23,7 @@
         <LinearLayout
             android:id="@+id/signup_layout"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -41,7 +41,7 @@
                 android:textSize="16dp" />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_email"
+                android:id="@+id/input_layout_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
