--- a/app/src/main/res/layout/fragment_signup_phone_2.xml
+++ b/app/src/main/res/layout/fragment_signup_phone_2.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/confirm_password"
+                android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirm password"
