--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-   <!-- <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />-->
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <!-- <item android:id="@+id/action_settings" android:title="@string/action_settings"
+         android:orderInCategory="100" app:showAsAction="never" />-->
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"
+        android:title="Search"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        android:title="Search"/>
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_menu_social"
+        android:title="Share"
+        app:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/ic_menu_share"
+                android:title="Share" />
+            <item
+                android:id="@+id/ic_menu_qrcode"
+                android:title="Scan QR Code" />
+        </menu>
+    </item>
 </menu>
