--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_name"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:typeface="sans" />
         </android.support.design.widget.TextInputLayout>
 
 
@@ -38,7 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:typeface="sans" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
@@ -48,7 +50,8 @@
             android:layout_marginTop="20dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_login"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:typeface="sans" />
 
         <Button
             android:id="@+id/btnLinkToRegisterScreen"
