--- a/app/src/main/res/layout/fragment_signup_phone_1.xml
+++ b/app/src/main/res/layout/fragment_signup_phone_1.xml
@@ -52,7 +52,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_phone"
                     android:inputType="phone"
-                    android:phoneNumber="true" />
+                    android:phoneNumber="true"
+                    android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
