--- a/app/src/main/res/layout/activity_accountsetting.xml
+++ b/app/src/main/res/layout/activity_accountsetting.xml
@@ -8,32 +8,37 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="false"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="30dp"
+                android:background="@color/white2"
+                android:gravity="fill_vertical"
+                android:paddingLeft="5dp"
                 android:text="@string/label_basic_infomation"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
                 android:typeface="serif" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/input_name"
@@ -41,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_name"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -55,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_phone"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -69,6 +76,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_email"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -83,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_nationality"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -97,6 +106,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_address1"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -111,6 +121,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_address2"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
@@ -125,11 +136,146 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_address3"
                     android:singleLine="true"
+                    android:textSize="16dp"
                     android:typeface="sans" />
             </android.support.design.widget.TextInputLayout>
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="fill_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@color/white2"
+                android:gravity="fill_vertical"
+                android:paddingLeft="5dp"
+                android:text="@string/label_role_setting"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
+            <tp.ve.com.tradingplatform.component.MultiSelectionSpinner
+                android:id="@+id/roleSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="10dp" />
+
+            <LinearLayout
+                android:id="@+id/advanced_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_comName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/input_comName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_comName"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:typeface="sans" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_comProfile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/input_comProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_comProfile"
+                        android:maxLines="3"
+                        android:textSize="16dp"
+                        android:typeface="sans" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_comWebsite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/input_comWebsite"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_comWebsite"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:typeface="sans" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_comPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/input_comPhone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_comPhone"
+                        android:inputType="phone"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:typeface="sans" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_comProduct"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/input_comProduct"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_comProduct"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:typeface="sans" />
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btn_uploadID"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Upload your ID card" />
+
+                <ImageView
+                    android:id="@+id/idImgPreview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btn_uploadBizLicense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Upload your Business License" />
+
+                <ImageView
+                    android:id="@+id/BizLicenseImgPreview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="15dp"
+                    android:visibility="gone" />
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
 
 </LinearLayout>
