--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,31 @@
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="76dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.07"
+            android:src="@drawable/icon_login" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="8dp"
+            android:text="Trading Platform"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#646464"
+            android:textIsSelectable="false"
+            android:textSize="26dp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_name"
@@ -23,6 +47,9 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_username"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_username"
                 android:hint="@string/login_name"
                 android:singleLine="true"
                 android:typeface="sans" />
@@ -38,6 +65,9 @@
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_pwd"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_pwd"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
                 android:typeface="sans" />
