--- a/app/src/main/res/layout/fragment_signup_email.xml
+++ b/app/src/main/res/layout/fragment_signup_email.xml
@@ -23,6 +23,9 @@
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_pwd"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_pwd"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:phoneNumber="true"
@@ -38,6 +41,9 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_fullname"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_fullname"
                 android:hint="@string/hint_name"
                 android:singleLine="true"
                 android:typeface="sans" />
@@ -53,6 +59,9 @@
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_pwd"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_pwd"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
                 android:typeface="sans" />
@@ -67,6 +76,9 @@
                 android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_pwd"
+                android:drawablePadding="10dip"
+                android:drawableStart="@drawable/icon_pwd"
                 android:hint="Confirm password"
                 android:inputType="textPassword"
                 android:typeface="sans" />
