--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <!--<color name="colorPrimary">#de5749</color>-->
     <color name="colorPrimary">#cc0000</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <!--<color name="colorPrimary">#e43f3f</color>-->
     <color name="colorAccent">#ff6861</color>
+    <color name="colorPrimaryDark">#cc1d1d</color>
+
     <color name="yellow1">#F9E60E</color>
     <color name="yellow2">#F9F89D</color>
     <color name="orange4">#F7BE45</color>
@@ -13,4 +15,9 @@
     <color name="grey05">#ACA899</color>
     <color name="white1">#FFFFFF</color>
     <color name="white2">#DDDDDD</color>
+
+    <!--<color name="colorPrimary">#4597f5</color>-->
+    <!--<color name="colorAccent">#7eb5f5</color>-->
+
+
 </resources>
