--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#cc0000"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#cc0000"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MainActivity"
+    tools:showIn="@layout/app_bar_main">
 
     <LinearLayout
         android:id="@+id/layout_main_body"
@@ -16,11 +19,11 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
 
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
-       <!-- <TextView android:id="@+id/selected_position_text"
-            android:text="" android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />-->
+        <!-- <TextView android:id="@+id/selected_position_text"
+             android:text="" android:layout_width="wrap_content"
+             android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 
@@ -28,10 +31,10 @@
         android:id="@+id/layout_upper_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
         android:layout_alignTop="@+id/layout_main_body"
+        android:layout_centerHorizontal="true"
 
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/layout_wheel_menu"
@@ -39,13 +42,13 @@
             android:layout_height="55dp"
             android:layout_alignTop="@+id/layout_upper_body"
 
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-           <!-- <com.anupcowkur.wheelmenu.WheelMenu
-                android:id="@+id/wheelMenu"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="300dp"
-                android:layout_height="300dp" />-->
+            <!-- <com.anupcowkur.wheelmenu.WheelMenu
+                 android:id="@+id/wheelMenu"
+                 android:layout_gravity="center_horizontal"
+                 android:layout_width="300dp"
+                 android:layout_height="300dp" />-->
 
             <HorizontalScrollView
                 android:id="@+id/scroll_view_BSS_menu"
@@ -53,18 +56,17 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:scrollbarAlwaysDrawHorizontalTrack="false" >
+                android:scrollbarAlwaysDrawHorizontalTrack="false">
 
                 <LinearLayout
                     android:id="@+id/linear_BSS_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bss_menu_shape"
                     android:layout_gravity="center_horizontal"
+                    android:background="@drawable/bss_menu_shape"
                     android:orientation="horizontal"
 
-                    >
-                </LinearLayout>
+                    ></LinearLayout>
             </HorizontalScrollView>
 
 
@@ -72,8 +74,10 @@
 
         <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
         <LinearLayout
-            android:focusable="true" android:focusableInTouchMode="true"
-            android:layout_width="0px" android:layout_height="0px"/>
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
         <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
              to prevent the dummy from receiving focus again -->
@@ -91,17 +95,15 @@
             android:layout_height="wrap_content"
 
             android:background="@drawable/shape"
-            android:scrollbarAlwaysDrawHorizontalTrack="false" >
+            android:scrollbarAlwaysDrawHorizontalTrack="false">
 
             <LinearLayout
                 android:id="@+id/linear_BSS_sub_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:orientation="horizontal" >
-            </LinearLayout>
+                android:orientation="horizontal"></LinearLayout>
         </HorizontalScrollView>
-
 
 
         <LinearLayout
@@ -110,21 +112,20 @@
             android:layout_height="match_parent"
             android:layout_alignBottom="@+id/layout_upper_body"
 
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <WebView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/web_view"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                android:layout_weight="1.0" />
+                android:layout_weight="1.0"
+                android:scrollbars="vertical" />
 
 
         </LinearLayout>
 
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
