--- a/app/src/main/res/layout/fragment_signup_email.xml
+++ b/app/src/main/res/layout/fragment_signup_email.xml
@@ -23,9 +23,9 @@
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/icon_pwd"
+                android:drawableLeft="@drawable/icon_email"
                 android:drawablePadding="10dip"
-                android:drawableStart="@drawable/icon_pwd"
+                android:drawableStart="@drawable/icon_email"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:phoneNumber="true"
