--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,7 +39,7 @@
         <LinearLayout
             android:id="@+id/layout_wheel_menu"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             android:layout_alignTop="@+id/layout_upper_body"
 
             android:orientation="vertical">
