--- a/app/src/main/res/layout/activity_accountsetting.xml
+++ b/app/src/main/res/layout/activity_accountsetting.xml
@@ -27,7 +27,6 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:title="Account Setting"
                 app:layout_collapseMode="pin" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -55,8 +54,8 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -138,10 +137,10 @@
                         android:layout_width="fill_parent"
                         android:layout_height="2dip"
                         android:layout_marginBottom="10dp"
-                        android:background="#c2c2c2"
-                        android:visibility="visible"
                         android:layout_marginLeft="3dp"
-                        android:layout_marginRight="3dp" />
+                        android:layout_marginRight="3dp"
+                        android:background="#c2c2c2"
+                        android:visibility="visible" />
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_mobile"
@@ -208,10 +207,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginTop="5dp">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -383,10 +382,10 @@
                             android:id="@+id/idImgPreview"
                             android:layout_width="fill_parent"
                             android:layout_height="100dp"
-                            android:layout_marginTop="10dp"
-                            android:visibility="gone"
                             android:layout_marginBottom="10dp"
-                            android:adjustViewBounds="false" />
+                            android:layout_marginTop="10dp"
+                            android:adjustViewBounds="false"
+                            android:visibility="gone" />
 
                         <Button
                             android:id="@+id/btn_uploadBizLicense"
@@ -399,9 +398,9 @@
                             android:id="@+id/BizLicenseImgPreview"
                             android:layout_width="fill_parent"
                             android:layout_height="100dp"
+                            android:layout_marginBottom="10dp"
                             android:layout_marginTop="10dp"
-                            android:visibility="gone"
-                            android:layout_marginBottom="10dp" />
+                            android:visibility="gone" />
 
                         <Button
                             android:id="@+id/btn_upload"
