--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -89,6 +89,18 @@
         </menu>
     </item>
 
+    <item
+        android:id="@+id/nav_more"
+        android:title="@string/subheader">
+        <menu>
+            <item
+                android:id="@+id/nav_help"
+                android:icon="@android:drawable/ic_menu_manage"
+                android:title="@string/action_help" />
+        </menu>
+    </item>
+
+
     <!--<item-->
     <!--android:id="@+id/nav_noLoggedin"-->
     <!--android:title="@string/subheader">-->
@@ -118,6 +130,4 @@
     <!--android:title="@string/action_logout" />-->
     <!--</menu>-->
     <!--</item>-->
-
-
 </menu>
